# diarios

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  path.py  pyproject.toml  requirements.txt  setup.py
diarios/: __init__.py  anonymize.py  assunto.py  caderno.py  classe.py  clean.py  close_election.py  comarca.py  database.py  decision.py  diario.py  extract.py  foro.py  foro_comarca.py  io.py  misc.py  municipio.py  municipio_id.py  municipio_manual_correction.csv  parse.py  politica.py  proc_db.py  regexes.py  structure.py  subsecao.py  tribunal.py
diarios/clean/: __init__.py  geo.py  legal.py  numbers.py  text.py
diarios/consulta/: PJe.py  STF.py  STJ.py  TJSP.py  TRF1.py
diarios/data/: assunto.org  caderno.csv  classe.csv  classe_dispositivo.csv  cnj_README.md  cnj_assuntos.csv  cnj_classes.csv  cnj_movs.csv  comarca.csv  decisao.csv  diario.csv  eleicao.csv  estado.csv  foro.csv  foro_raw.csv  municipio.csv  municipio_correction.csv  municipio_correction_manual.csv  municipio_correction_tse.csv  municipio_id.csv  municipio_overrides.csv  name_ll.csv  subsecao.csv  tipo_parte.csv  tribunal.csv  trt_estado.csv
diarios/decision/: __init__.py  config.py  parser.py
diarios/scrape/: __init__.py  datajud.py
scripts/: assunto.py  caderno.py  classe.py  comarca.py  diario.py  foro.py  municipio.py  municipio_id.py  refresh_cnj_tables.py  tribunal.py  vara.py
tests/: test_clean.py  test_decision.py  test_parse.py  test_structure.py
tests/data/: test_transform.csv
